GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Trailer_History__c/Amex_to_Eurostar_Trailer_History__c.object-meta.xml
<CustomObject>
    <label>Amex to Eurostar Trailer History</label>
    <nameField>
        <displayFormat>ATETH-{0000000000}</displayFormat>
        <label>Amex to Eurostar Trailer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amex to Eurostar Trailer History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>