GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Trailer_History__c/fields/Number_of_detail_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_detail_records__c</fullName>
    <label>Number of detail records</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>