GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Trailer_History__c/fields/Sending_System__c.field-meta.xml
<CustomField>
    <fullName>Sending_System__c</fullName>
    <label>Sending System</label>
    <length>6</length>
    <type>Text</type>
</CustomField>