GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Trailer_History__c/fields/Status_Message__c.field-meta.xml
<CustomField>
    <fullName>Status_Message__c</fullName>
    <label>Status Message</label>
    <length>100</length>
    <type>Text</type>
</CustomField>