GearsetPOC/force-app/main/default/objects/Amex_to_Eurostar_Trailer_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Footer_ID__c</columns>
    <columns>Delivery_Date__c</columns>
    <columns>Batch_Type__c</columns>
    <columns>Sending_System__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Message__c</columns>
    <columns>Supplier__c</columns>
    <columns>Number_of_detail_records__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>